--- a/MesaRPG/nbproject/project.properties
+++ b/MesaRPG/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/MesaRPG.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.junit-4.12.jar=C:\\Users\\Arlindo\\Downloads\\junit-4.12.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -41,7 +42,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.junit-4.12.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
