--- a/MesaRPG/nbproject/project.properties
+++ b/MesaRPG/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=mesarpg.MesaRPG
+main.class=Aplicacao.Aplicacao
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
