--- a/MesaRPG/nbproject/private/private.properties
+++ b/MesaRPG/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=false
 do.depend=false
 do.jar=true
+file.reference.junit-4.12.jar=J:\\GitHub\\MesaRPG\\MesaRPG\\lib
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Arlindo\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Jo\u00e3oVitor\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
